src/objects/Components__c.object
<CustomObject>
    <description>List of various components for ExperiencePackages</description>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>HW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_CWV__c</fullName>
        <label>Cost (CWV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Opp__c</fullName>
        <label>Cost (Opp)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Component_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Cost_CWV__c</columns>
        <columns>Cost_Opp__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Component_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>isblank(text(Component_Type__c ))</errorConditionFormula>
        <errorDisplayField>Component_Type__c</errorDisplayField>
        <errorMessage>Please specify if component is HW or SW</errorMessage>
    </validationRules>
</CustomObject>